# sopher

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
src/: main.cpp
